# SF3000

./: README.md  pyproject.toml
docs/specs/: 2026-06-14-sf3000-toolkit-design.md
docs/superpowers/plans/: 2026-06-14-sf3000-toolkit.md
src/sf3000/: cli.py  config.py  cosmetic.py  covers.py  fix_roms.py  rebuild_lists.py  rollback.py  unlock_systems.py
src/sf3000.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_cosmetic.py  test_covers.py  test_fix_roms.py  test_rebuild_lists.py  test_rollback.py  test_unlock_systems.py
